syntax = "proto3";

package auth_credential;

option java_package = "com.anon.auth_credential";
option java_outer_classname = "AuthCredentialProto";
option java_multiple_files = false;

import "google/protobuf/timestamp.proto";

enum CredentialType {
  CREDENTIAL_TYPE_UNSPECIFIED = 0;
  PASSWORD = 1;
  EMAIL_CODE = 2;
  GOOGLE_2FA = 3;
  OAUTH = 4;
}

message AuthCredential {
  int64 credential_id = 1;
  int64 user_id = 2;
  CredentialType type = 3;
  string identifier = 4; // e.g., email, phone, oauth id
  string secret = 5;     // e.g., password hash or 2FA secret
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// ==== 添加认证方式 ====

message AddAuthCredentialRequest {
  int64 user_id = 1;
  CredentialType type = 2;
  string identifier = 3;
  string secret = 4;
}

message AddAuthCredentialResponse {
  int64 credential_id = 1;
}

// ==== 查询认证方式 ====

message GetAuthCredentialsRequest {
  int64 user_id = 1;
}

message GetAuthCredentialsResponse {
  repeated AuthCredential credentials = 1;
}

// ==== Service ====

service AuthCredentialService {
  rpc AddAuthCredential(AddAuthCredentialRequest) returns (AddAuthCredentialResponse);
  rpc GetAuthCredentials(GetAuthCredentialsRequest) returns (GetAuthCredentialsResponse);
}
